# seedvox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  check_film.py  phoneme_tokenizer.py  phonetic_utils.py  plan_explicit_phonemes.md  pyproject.toml  requirements.txt  setup.py  test_phoneme_padding.py  text_normalizer.py
.github/workflows/: ci.yml
configs/: default.json  default.json~  light.json  light_fusion.json
docs/: dual-FILM.md  motivation.md
explicit_pros_phon_planner/: finetune_lora_fusion.py  infer.py  infer.py~  model.py  model_fusion.py  planner.py  test_correctness.py  test_model.py  test_phonetic_consistency.py  train_launcher.py  trainer.py  trainer_fusion.py  utils.py
research/: benchmark_g2p.py  debug_g2p_tokens.py  debug_homographs.py  debug_homographs_espeak.py  debug_parallel_g2p.py  debug_tokenizer_mapping.py  debug_unknown_phonemes.py  info3.md  paper.md  reproduce_espeak.py
scripts/: ablation_test.py  infer.py
src/seedvox/: __init__.py  base.py  bpe_char_encoder.py  model.py  planner.py  prosody_utils.py  trainer.py  utils.py
src/seedvox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/seedvox/modules/: components.py  mimi.py
src/seedvox/modules/moshi/: client_utils.py  offline.py  server.py
src/seedvox/training/: __init__.py  dataset.py
src/seedvox/utils/: __init__.py  g2p_factory.py  text.py  tokenizer.py
tests/: test_imports.py  test_model_load.py
tools/: check_sdpa.py  prepare_mlm_dataset.py  prepare_tts_dataset_prosody.py  pretrain_phonetic_head.py  runprecomputedg2p.py  shrink_model.py  viz_prs.py
(+16 files in other folders)
